Text-align Discover page fixed

--- a/discover/pages/immersive/css/immersive.css
+++ b/discover/pages/immersive/css/immersive.css
@@ -448,6 +448,9 @@ body {
   }
 }
 @media screen and (max-width: 1000px) {
+  .Immersive-btn{
+    text-align: center;
+  }
   .Grid-container {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
