--- a/discover/pages/loving/css/loving.css
+++ b/discover/pages/loving/css/loving.css
@@ -447,6 +447,9 @@ body {
   }
 }
 @media screen and (max-width: 1000px) {
+  .Loving-btn{
+    text-align: center;
+  }
   .Grid-container {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
